1 глава.txt
Python 3.9.7 (tags/v3.9.7:1016ef3, Aug 30 2021, 20:19:38) [MSC v.1929 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> Фисташковое мороженое
  File "<stdin>", line 1
    Фисташковое мороженое
                ^
SyntaxError: invalid syntax
>>> print("Малиновое мороженое")
Малиновое мороженое
>>> name=input('Как вас зовут?\n')
Как вас зовут?
print('Мария',name)
>>> print(input('Нажмите Enter для выхода'))
Нажмите Enter для выхода

>>> print('\'На самом деле, жизнь проста, но мы настойчиво её усложняем\'')
'На самом деле, жизнь проста, но мы настойчиво её усложняем'
>>> print('(c)Конфуций')
(c)Конфуций
